[gd_scene load_steps=6 format=2]

[ext_resource path="res://arrownote.png" type="Texture" id=1]
[ext_resource path="res://LeftArrow.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 14 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 14 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23, 14 )

[node name="LeftArrow" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PerfectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerfectArea"]
position = Vector2( -5.5, 0 )
shape = SubResource( 1 )

[node name="GoodArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoodArea"]
position = Vector2( -2, 0 )
shape = SubResource( 2 )

[node name="OkayArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OkayArea"]
position = Vector2( 5, 0 )
shape = SubResource( 3 )

[connection signal="area_entered" from="PerfectArea" to="." method="_on_PerfectArea_area_entered"]
[connection signal="area_entered" from="GoodArea" to="." method="_on_GoodArea_area_entered"]
[connection signal="area_entered" from="OkayArea" to="." method="_on_OkayArea_area_entered"]
[connection signal="area_exited" from="OkayArea" to="." method="_on_OkayArea_area_exited"]
